# Gauche-al-mg

./: .hg_archival.txt  ChangeLog  DIST  Makefile.in  README.md  README_orig  autogen.sh  configure  configure.ac  test.scm
doc/: Makefile.in  gauche-al-refe.texi  gauche-al-refj.texi
example/: play.bat  play.scm
example/mml/: README.md  mmlproc.scm  test1001.scm  test1002.bat  test1002.scm
lib/: Makefile.in  al.scm
src/: Makefile.in  al-lib.stub  alc-lib.stub  alut-lib.stub  gauche-al.c  gauche-al.h  gauche-al.types
